--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,20 @@
 <resources>
     <string name="app_name">StockStreakz</string>
 
-    <!-- Toolbar menu-->
+    <!-- Toolbar menu -->
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="action_search_hint">Ticker Symbol...</string>
 
     <!-- logo -->
     <string name="logo_font_name">harlowsi.TTF</string>
+
+    <!-- toast msgs -->
+    <string name="toast_error_retrieving_data">Error retrieving data</string>
+    <string name="toast_stock_not_found">Symbol not found</string>
+    <string name="toast_no_network">No Network Connection</string>
+
+    <!--content description-->
+    <string name="content_description_stock_arrow">Stock arrow</string>
+
 </resources>
