--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
     <!--content description-->
     <string name="content_description_stock_arrow">Stock arrow</string>
 
+    <!-- detail fragment strings-->
+    <string name="prev_close">Previous Close:</string>
+    <string name="percent_change">% Change:</string>
+    <string name="dollar_change">$ Change:</string>
+    <string name="streak">Streak:</string>
+
 </resources>
