--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,9 @@
     <string name="logo_font_name">harlowsi.TTF</string>
 
     <!-- toast msgs -->
-    <string name="toast_error_retrieving_data">Error retrieving data</string>
-    <string name="toast_stock_not_found">Symbol not found</string>
-    <string name="toast_no_network">No Network Connection</string>
+    <string name="toast_error_retrieving_data">Error retrieving data.</string>
+    <string name="toast_stock_not_found">Symbol not found.</string>
+    <string name="toast_no_network">No Network Connection.</string>
 
     <!--content description-->
     <string name="content_description_stock_arrow">Stock arrow</string>
@@ -22,9 +22,13 @@
     <string name="percent_change">% Change:</string>
     <string name="dollar_change">$ Change:</string>
     <string name="streak">Streak:</string>
-    <string name="last_streak_price">Last Streak Price:</string>
-    <string name="last_streak">Last Streak:</string>
+    <string name="last_streak_price">Prev. Streak End Price:</string>
+    <string name="last_streak">Prev. Streak:</string>
     <string name="streak_year_high">365 Day\nStreak High:</string>
     <string name="streak_year_low">365 Day\nStreak Low:</string>
+
+    <!-- Snackbar -->
+    <string name="snackbar_main_text">%1$s removed</string>
+    <string name="snackbar_action_text">UNDO</string>
 
 </resources>
