--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
-    <string name="app_name">StockStreakz</string>
+    <string name="app_name">Stock Streaks</string>
 
     <!-- Toolbar menu -->
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
-    <string name="action_search_hint">Ticker Symbol...</string>
+    <string name="search_hint">Search Symbol...</string>
 
     <!-- logo -->
     <string name="logo_font_name">harlowsi.TTF</string>
