--- a/app/libs/persistent-search/src/main/res/values/strings.xml
+++ b/app/libs/persistent-search/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="speak_now">Speak now</string>
+    <string name="content_description_mic">Speech To Text</string>
+    <string name="content_description_menu">Menu</string>
+    <string name="content_description_close_search">Close Search</string>
+    <string name="content_description_nav">Navigation</string>
 </resources>
