--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_search">Search</string>
     <string name="search_hint">Search Symbol...</string>
+    <string name="logo_typeface_path" translatable="false">fonts/harlowsi.TTF</string>
 
     <!-- logo -->
     <string name="logo_font_name">harlowsi.TTF</string>
