removed padding from stock arrow images for more precise positioning

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <!-- toast msgs -->
     <string name="toast_error_retrieving_data">Error retrieving data.</string>
     <string name="toast_stock_not_found">Symbol not found.</string>
+    <string name="toast_empty_search">Please enter a symbol.</string>
     <string name="toast_no_network">No Network Connection.</string>
 
     <!--content description-->
