--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="content_description_stock_arrow">Stock arrow</string>
 
     <!-- detail fragment strings-->
-    <string name="prev_close">Prev. Close:</string>
+    <string name="recent_close">Recent Close:</string>
     <string name="percent_change">% Change:</string>
     <string name="dollar_change">$ Change:</string>
     <string name="streak">Streak:</string>
