--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <!-- toast msgs -->
     <string name="toast_error_retrieving_data">Error retrieving data from server</string>
     <string name="toast_symbol_not_found">Symbol not found</string>
+    <string name="toast_symbol_exists">Symbol already exists</string>
     <string name="toast_empty_search">Please enter a symbol</string>
     <string name="toast_no_network">No Network Connection</string>
 
@@ -35,5 +36,8 @@
     <!-- Snackbar -->
     <string name="snackbar_main_text">%1$s removed</string>
     <string name="snackbar_action_text">UNDO</string>
+
+    <!--MainAdapter-->
+    <string name="change_amt">%1$s(%2$s%%)</string>
 
 </resources>
