Aligned prices and formatted list items. Prevent notifying more than 1 Uri
* Stock prices are now aligned together for neater presentation.
* List items are not formattted correctly with the correct colors for
  change amounts and also now shows streak arrows.
* Prevent notfying more than 1 URI at a time as this caused an unnecessary
  amount of code to run,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,10 +34,14 @@
     <string name="streak_year_low">365 Day\nStreak Low:</string>
 
     <!-- Snackbar -->
-    <string name="snackbar_main_text">%1$s removed</string>
+    <string name="placeholder_snackbar_main_text">%1$s removed</string>
     <string name="snackbar_action_text">UNDO</string>
 
     <!--MainAdapter-->
-    <string name="change_amt">%1$s(%2$s%%)</string>
+    <string name="placeholder_change_amt">%1$s(%2$s)</string>
+    <string name="placeholder_dollar">$%1$s</string>
+    <string name="placeholder_percent">%1$s%%</string>
+    <string name="placeholder_days">%1$s days</string>
+    <string name="placeholder_d">%1$sd</string>
 
 </resources>
