Implemented DetailFragment + other small changes
* Search is disabled after searching an item to prevent two items being
searched at once.
* If the user quits the app while item is loading and has been added to
 the db, the item will not be lost.
* "days" is now singular("day") for days of 1 or -1 streak.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="placeholder_change_amt">%1$s(%2$s)</string>
     <string name="placeholder_dollar">$%1$s</string>
     <string name="placeholder_percent">%1$s%%</string>
+    <string name="placeholder_day">%1$s day</string>
     <string name="placeholder_days">%1$s days</string>
     <string name="placeholder_d">%1$sd</string>
     <string name="placeholder_update_time">Updated: %1$s</string>
