--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,9 @@
     <string name="logo_font_name">harlowsi.TTF</string>
 
     <!-- toast msgs -->
+    <string name="toast_symbol_exists_placeholder">%1$s already exists</string>
     <string name="toast_error_retrieving_data">Error retrieving data from server</string>
     <string name="toast_symbol_not_found">Symbol not found</string>
-    <string name="toast_symbol_exists">Symbol already exists</string>
     <string name="toast_empty_search">Please enter a symbol</string>
     <string name="toast_no_network">No Network Connection</string>
     <string name="toast_already_up_to_date">Already up to date</string>
