Small bug fixes
* DetailFragment specific values are set back to 0 when the stock is
 refreshed
* The default list_position when adding a stock is now -1 instead of 0.
* A toast will pop up now, if a user tries to load a few, but the list
 needs to sync.
* LoadFromDbFinished callback now executes inside the eventbus.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="toast_no_network">No Network Connection</string>
     <string name="toast_already_up_to_date">Already up to date</string>
     <string name="toast_error_updating_list">Error updating list</string>
+    <string name="toast_error_refresh_list">List out of sync. Please refresh list.</string>
 
     <!--RecyclerView-->
     <string name="empty_list_msg">Use the search box above\nto add an item.</string>
