--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,7 @@
     <string name="update_time_format" translatable="false">EEEE, MMMM dd\n@ h:mm a</string>
     <string name="update_time_format_wide" translatable="false">EEEE, MMMM dd @ h:mm a</string>
 
+    <!-- Widget -->
+    <string name="widget_empty_list">No Information Available</string>
+
 </resources>
