--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="logo_font_name">harlowsi.TTF</string>
 
     <!-- toast msgs -->
-    <string name="toast_error_retrieving_data">Error retrieving mData from server</string>
+    <string name="toast_error_retrieving_data">Error retrieving data from server</string>
     <string name="toast_symbol_not_found">Symbol not found</string>
     <string name="toast_empty_search">Please enter a symbol</string>
     <string name="toast_no_network">No Network Connection</string>
@@ -26,6 +26,7 @@
 
     <!--content description-->
     <string name="content_description_stock_arrow">Stock arrow</string>
+    <string name="content_description_button_refresh">Refresh</string>
 
     <!-- detail fragment strings-->
     <string name="recent_close">Recent Close:</string>
