--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Stock Streaks</string>
+    <string name="app_name_initials">S S</string>
 
     <!-- Toolbar menu -->
     <string name="action_refresh">Refresh</string>
