--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Stock Streaks</string>
-    <string name="app_name_initials">S S</string>
+    <string name="app_name_initials">&#160;SS&#160;</string>
 
     <!-- Toolbar menu -->
     <string name="action_refresh">Refresh</string>
@@ -54,8 +54,7 @@
     <string name="placeholder_days">%1$s days</string>
     <string name="placeholder_d">%1$sd</string>
     <string name="placeholder_update_time">Updated: %1$s</string>
-    <string name="update_time_format" translatable="false">EEEE, MMMM dd\n@ h:mm a</string>
-    <string name="update_time_format_wide" translatable="false">EEEE, MMMM dd @ h:mm a</string>
+    <string name="update_time_format_wide" translatable="false">EEEE, MMMM dd @&#160;h:mm&#160;a</string>
 
     <!-- Widget -->
     <string name="widget_empty_list">No Information Available</string>
