Quality of life improvements
* Dragging and swiping of an item will not be interrupted by load symbol/
load more. However, it will still be interrupted by a refresh.

* Release of a dragging item will no longer accidentally perform a click.

* Added a limitation of the number of stocks you can have.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="toast_error_updating_list">Error updating list</string>
     <string name="toast_error_refresh_list">List out of sync. Please refresh list</string>
     <string name="toast_placeholder_symbol_exists">%1$s already exists</string>
-    <string name="toast_placeholder_error_stock_limit">Sorry, unable not exceed limit of $1%d stocks</string>
+    <string name="toast_placeholder_error_stock_limit">Unable to exceed maximum limit of $1%d stocks</string>
 
     <!--RecyclerView-->
     <string name="empty_list_msg">Use the search box above\nto add an item.</string>
