--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,13 @@
     <string name="app_name">Stock Streaks</string>
     <string name="app_name_initials">&#160;SS&#160;</string>
 
-    <!--Admob-->
+    <!-- Admob -->
     <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
+
+    <!-- Analytics (If you have alot of analytics code-->
+    <string name="analytics_category">Symbol Event</string>
+    <string name="analytics_action_add">Item Add</string>
+    <string name="analytics_label_add_placeholder">Add %1$s</string>
 
     <!-- Toolbar menu -->
     <string name="action_refresh">Refresh</string>
