--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="toast_placeholder_error_stock_limit">Unable to exceed max limit of %1$d stocks</string>
 
     <!--RecyclerView-->
-    <string name="empty_list_msg">Use the search box above\nto add an item.</string>
+    <string name="empty_list_msg">Use the search box above\nto add a stock.</string>
 
     <!--content description-->
     <string name="content_description_stock_arrow">Stock arrow</string>
