--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,14 +7,22 @@
         ca-app-pub-3940256099942544/1033173712
     </string>
 
-    <!-- Analytics -->
-    <string name="analytics_tracking_id" translatable="false">YOUR ANALYTICS TRACKING ID HERE</string>
-    <string name="analytics_category">Symbol Event</string>
-    <string name="analytics_action_add">Item Add</string>
-    <string name="analytics_label_add_placeholder">Add %1$s</string>
-
-    <!-- TagManager -->
+    <!-- TagManager (Analytics config in xml folder) -->
     <string name="tag_manager_motd_container_id" translatable="false"></string>
+    <string name="tag_manager_motd_key" translatable="false">msg_of_the_day</string>
+
+    <string name="tag_manager_symbol_add_event_name" translatable="false">Symbol Add</string>
+    <string name="tag_manager_screen_view_bar_chart_event_name" translatable="false">Screen View Bar Chart</string>
+
+    <string name="tag_manager_event_category_key" translatable="false">event_category</string>
+    <string name="tag_manager_event_action_key" translatable="false">event_action</string>
+    <string name="tag_manager_event_label_key" translatable="false">event_label</string>
+    <string name="tag_manager_screen_view_bar_chart_key" translatable="false">screen_view_bar_chart</string>
+
+    <string name="tag_manager_event_category" translatable="false">Symbol Event</string>
+    <string name="tag_manager_event_action" translatable="false">Symbol Add</string>
+    <string name="tag_manager_placeholder_event_label" translatable="false">Add %1$s</string>
+    <string name="tag_manager_placeholder_screen_view_bar_chart" translatable="false">Bar Chart Activity %1$s</string>
 
     <!-- Navigation menu -->
     <string name="navigation_motd">Message of the Day</string>
@@ -75,7 +83,7 @@
     <string name="offset_negative_sign">-</string>
 
     <!-- Bar Chart-->
-    <string name="bar_chart_description_placeholder">%1$s 365 Day Streaks</string>
+    <string name="bar_chart_placeholder_description">%1$s 365 Day Streaks</string>
     <string name="bar_chart_negative_color_label">Negative Streak</string>
     <string name="bar_chart_positive_color_label">Positive Streak</string>
 
